@@ -1302,7 +1302,8 @@ sub pandora_serverkeepaliver (%$$) {
 		$temp = $pa_config->{"keepalive_orig"} * 2; # Down if keepalive x 2 seconds unknown
 		my $fecha_limite = DateCalc($timestamp,"- $temp seconds",\$err);
 		$fecha_limite = &UnixDate($fecha_limite,"%Y-%m-%d %H:%M:%S");
-		my $query_idag = "SELECT * FROM tserver WHERE keepalive < '$fecha_limite'";
+		
+		my $query_idag = "SELECT * FROM tserver WHERE status = 1 AND keepalive < '$fecha_limite'";
 		my $s_idag = $dbh->prepare($query_idag);
 		$s_idag ->execute;
 		if ($s_idag->rows != 0) {
@@ -1313,19 +1314,16 @@ sub pandora_serverkeepaliver (%$$) {
 					my $sql_update = "UPDATE tserver SET status = 0, version = '".$version_data."' WHERE id_server = $data[0]";
 					$dbh->do($sql_update);
 
-
-					pandora_event ($pa_config, "Server ".$data[1]." going Down", 0,
-								   0, 4, 0, 0, "system", $dbh);
-
-					logger( $pa_config, "Server ".$data[1]." going Down ",1);
+					pandora_event ($pa_config, "Server ".$data[1]." going Down", 0, 0, 4, 0, 0, "system", $dbh);
+					logger( $pa_config, "Server ".$data[1]." going Down ", 1);
 				}
 			}
 		}
 		$s_idag->finish();
-		# Update my server
 		$pa_config->{"keepalive"} = $pa_config->{"keepalive_orig"};
+	} else {
+		$pa_config->{"keepalive"} = $pa_config->{"keepalive"} - $pa_config->{"server_threshold"};
 	}
-	$pa_config->{"keepalive"} = $pa_config->{"keepalive"} - $pa_config->{"server_threshold"};
 }
 
 ##########################################################################
